# mozilla-vpn-client

docs/dev-setup/: macos.md
nebula/ui/components/: MZFlickable.qml
nebula/ui/components/inAppAuth/: MZInAppAuthenticationInputs.qml
scripts/cmake/: golang.cmake
src/telemetry/: metrics.yaml
src/ui/authenticationInApp/: ViewAuthenticationSignIn.qml  ViewAuthenticationSignUp.qml  ViewAuthenticationStart.qml  ViewAuthenticationUnblockCodeNeeded.qml  ViewAuthenticationVerificationSessionByEmailNeeded.qml  ViewAuthenticationVerificationSessionByTotpNeeded.qml
src/ui/screens/: ScreenSubscriptionInProgressIAP.qml  ScreenSubscriptionInProgressWeb.qml
src/ui/screens/home/: ViewMultiHop.qml
src/ui/screens/initialize/: ViewInitialize.qml
src/xpc/: CMakeLists.txt  xpcbase.h  xpcclient.cpp  xpcclient.h  xpcservice.cpp
src/xpc/examples/: CMakeLists.txt  client.cpp  example.server.plist.in  server.cpp
taskcluster/ci/docker-image/: kind.yml
tests/functional/: helper.js  queries.js  testOnboarding.js  testSubscriptionNeeded.js
